force-app/main/default/objects/SSP_InsurancePolicy__c/SSP_InsurancePolicy__c.object-meta.xml
<CustomObject>
    <description>Holds details about insurance company, policy and external policy holder.</description>
    <label>SSP InsurancePolicy</label>
    <nameField>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>SSP_InsurancePolicy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSP InsurancePolicies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>