force-app/main/default/objects/SSP_InsurancePolicy__c/fields/DCEmploymentDetailId__c.field-meta.xml
<CustomField>
    <fullName>DCEmploymentDetailId__c</fullName>
    <description>This field is used to identify the Unique Employment detail for an External system</description>
    <externalId>true</externalId>
    <label>DCEmploymentDetailId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>