force-app/main/default/objects/SSP_InsurancePolicy__c/fields/DoNotHaveAllInformation__c.field-meta.xml
<CustomField>
    <fullName>DoNotHaveAllInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is use to identify whether user have all detail information of Policy and its Covered Individuals</description>
    <label>Don&apos;t have all Information?</label>
    <type>Checkbox</type>
</CustomField>