force-app/main/default/objects/SSP_InsurancePolicy__c/fields/EmployerName__c.field-meta.xml
<CustomField>
    <fullName>EmployerName__c</fullName>
    <description>This field will capture employer for Policy.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>