force-app/main/default/objects/SSP_InsurancePolicy__c/fields/EnrollmentTierLevel__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentTierLevel__c</fullName>
    <description>This field is used to store Enrollment Tier Level for an Insurance Policy</description>
    <label>Enrollment Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>EnrollmentTierLevel</valueSetName>
        
        </valueSet>
</CustomField>