force-app/main/default/objects/SSP_InsurancePolicy__c/fields/InsuranceCompanyName__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompanyName__c</fullName>
    <description>Health coverage company name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Insurance Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>