force-app/main/default/objects/SSP_InsurancePolicy__c/fields/InsuranceGroupNumber__c.field-meta.xml
<CustomField>
    <fullName>InsuranceGroupNumber__c</fullName>
    <description>Health coverage Insurance Group Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Insurance Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>