force-app/main/default/objects/SSP_InsurancePolicy__c/fields/InsurancePolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicyNumber__c</fullName>
    <description>Health coverage Insurance Policy Number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>