force-app/main/default/objects/SSP_InsurancePolicy__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if the existing Policy is deleted</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>