force-app/main/default/objects/SSP_InsurancePolicy__c/fields/IsEnrolledInInsurance__c.field-meta.xml
<CustomField>
    <fullName>IsEnrolledInInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the Insurance is Enrolled</description>
    <label>IsEnrolledInInsurance</label>
    <type>Checkbox</type>
</CustomField>