force-app/main/default/objects/SSP_InsurancePolicy__c/fields/IsHealthCareCoverageApproved__c.field-meta.xml
<CustomField>
    <fullName>IsHealthCareCoverageApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the Health Care coverage policy is approved</description>
    <label>IsHealthCareCoverageApproved</label>
    <type>Checkbox</type>
</CustomField>