force-app/main/default/objects/SSP_InsurancePolicy__c/fields/IsHealthCareCovPolicyHolderOutSideCase__c.field-meta.xml
<CustomField>
    <fullName>IsHealthCareCovPolicyHolderOutSideCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the Health Care Coverage is outside case</description>
    <label>IsHealthCareCovPolicyHolderOutSideCase</label>
    <type>Checkbox</type>
</CustomField>