force-app/main/default/objects/SSP_InsurancePolicy__c/fields/IsKIHIPPSourceOfCoverage__c.field-meta.xml
<CustomField>
    <fullName>IsKIHIPPSourceOfCoverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to identify if KI-HIPP source of coverage was selected on Enrollment details.</description>
    <label>IsKIHIPPSourceOfCoverage</label>
    <type>Checkbox</type>
</CustomField>