force-app/main/default/objects/SSP_InsurancePolicy__c/fields/IsPolicyUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsPolicyUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated once the Policy details are entered.</description>
    <label>Is Policy Updated</label>
    <type>Checkbox</type>
</CustomField>