force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PhysicalAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>PhysicalAddressLine1__c</fullName>
    <description>Physical Address line 1 of Health coverage company</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Physical Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>