force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PhysicalAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>PhysicalAddressLine2__c</fullName>
    <description>Physical Address Line 2 of Health coverage company</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Physical Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>