force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PhysicalCity__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCity__c</fullName>
    <description>Physical City of Health Coverage</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Physical City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>