force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PhysicalCountryCode__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCountryCode__c</fullName>
    <description>Physical Country of Health Coverage</description>
    <label>Physical Country</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCountry</valueSetName>
        
        </valueSet>
</CustomField>