force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PhysicalCountyCode__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCountyCode__c</fullName>
    <description>Physical County of Health Coverage</description>
    <label>Physical County</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCounty</valueSetName>
        
        </valueSet>
</CustomField>