force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PhysicalStateCode__c.field-meta.xml
<CustomField>
    <fullName>PhysicalStateCode__c</fullName>
    <description>Physical State of Health Coverage</description>
    <label>Physical State</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>