force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PhysicalZipCode4__c.field-meta.xml
<CustomField>
    <fullName>PhysicalZipCode4__c</fullName>
    <description>Physical Zip Code 4 of Health Coverage</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Physical Zip Code 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>