force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PhysicalZipCode5__c.field-meta.xml
<CustomField>
    <fullName>PhysicalZipCode5__c</fullName>
    <description>Physical Zip Code 5 of Health Coverage</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Physical Zip Code 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>