force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PlanName__c.field-meta.xml
<CustomField>
    <fullName>PlanName__c</fullName>
    <description>Health coverage plan name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>