force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PolicyBeginDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyBeginDate__c</fullName>
    <description>This field is use to store the Insurance Policy Start Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PolicyBeginDate</label>
    <type>Date</type>
</CustomField>