force-app/main/default/objects/SSP_InsurancePolicy__c/fields/PolicyEndDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyEndDate__c</fullName>
    <description>This is used to store Insurance Policy End date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy End Date</label>
    <type>Date</type>
</CustomField>