force-app/main/default/objects/SSP_InsurancePolicy__c/fields/RelatedInsurance__c.field-meta.xml
<CustomField>
    <fullName>RelatedInsurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate the related Insurance of an Insurance Policy</description>
    <label>Related Insurance</label>
    <referenceTo>SSP_InsurancePolicy__c</referenceTo>
    <relationshipName>SSP_InsurancePolicies</relationshipName>
    <type>Lookup</type>
</CustomField>