force-app/main/default/objects/SSP_InsurancePolicy__c/fields/SuffixCode__c.field-meta.xml
<CustomField>
    <fullName>SuffixCode__c</fullName>
    <description>Suffix code</description>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suffix</valueSetName>
    </valueSet>
</CustomField>