force-app/main/default/objects/SSP_InsurancePolicy__c/fields/TypeOfCoverageCode__c.field-meta.xml
<CustomField>
    <fullName>TypeOfCoverageCode__c</fullName>
    <description>Source of healthcare coverage</description>
    <label>Type Of Coverage Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>CA</fullName>
                
                
                    <label>Cancer Only</label>
                
                </value>
            
                <value>
                
                    <fullName>CH</fullName>
                
                
                    <label>CHAMPVA</label>
                
                </value>
            
                <value>
                
                    <fullName>CO</fullName>
                
                
                    <label>COBRA</label>
                
                </value>
            
                <value>
                
                    <fullName>DE</fullName>
                
                
                    <label>Dental Only</label>
                
                </value>
            
                <value>
                
                    <fullName>EM</fullName>
                
                
                    <label>Insurance through an employer, including the parent&apos;s employer</label>
                
                </value>
            
                <value>
                
                    <fullName>IH</fullName>
                
                
                    <label>Indian Health Services</label>
                
                </value>
            
                <value>
                
                    <fullName>KA</fullName>
                
                
                    <label>Kentucky Access</label>
                
                </value>
            
                <value>
                
                    <fullName>LT</fullName>
                
                
                    <label>Long Term Care Insurance</label>
                
                </value>
            
                <value>
                
                    <fullName>MS</fullName>
                
                
                    <label>Medical Supplemental</label>
                
                </value>
            
                <value>
                
                    <fullName>RH</fullName>
                
                
                    <label>Retiree Health Plan</label>
                
                </value>
            
                <value>
                
                    <fullName>NC</fullName>
                
                
                    <label>Insurance from a Non-Custodial Parent</label>
                
                </value>
            
                <value>
                
                    <fullName>OT</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
                <value>
                
                    <fullName>PC</fullName>
                
                
                    <label>Peace Corps</label>
                
                </value>
            
                <value>
                
                    <fullName>PH</fullName>
                
                
                    <label>Pharmacy Only</label>
                
                </value>
            
                <value>
                
                    <fullName>PM</fullName>
                
                
                    <label>Private Medical Insurance</label>
                
                </value>
            
                <value>
                
                    <fullName>TR</fullName>
                
                
                    <label>TRICARE</label>
                
                </value>
            
                <value>
                
                    <fullName>UM</fullName>
                
                
                    <label>United Mine Workers</label>
                
                </value>
            
                <value>
                
                    <fullName>VA</fullName>
                
                
                    <label>VA (Veterans Health Benefit)</label>
                
                </value>
            
                <value>
                
                    <fullName>VI</fullName>
                
                
                    <label>Vision Only</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>