force-app/main/default/objects/SSP_InsurancePolicy__c/recordTypes/InsuranceCompany.recordType-meta.xml
<RecordType>
    <fullName>InsuranceCompany</fullName>
    <active>true</active>
    <description>This is used to store Insurance Company details.</description>
    <label>Insurance Company</label>
</RecordType>