force-app/main/default/objects/SSP_InsurancePolicy__c/recordTypes/InsurancePolicyDetail.recordType-meta.xml
<RecordType>
    <fullName>InsurancePolicyDetail</fullName>
    <active>true</active>
    <description>This is used to store Insurance Policy details.</description>
    <label>Insurance Policy Detail</label>
</RecordType>